<resources>
    <string name="app_name">Groceries Plus</string>
    <string name="app_display_name">Groceries+</string>

    <string name="itemNameText">Grocery Item</string>
    <string name="moreButtonText">More</string>
    <string name="expireText">Expire by:</string>
    <string name="restockText">Restock by:</string>
    <string name="itemAmount">Quantity: </string>

    <string name="listNameText">List Name</string>
    <string name="dueDateText">Do by:</string>

    <string name="activeListText">Active</string>
    <string name="historyTabText">History</string>

    <string name="addButtonText">Add</string>

    <string name="dateFillText">Mon., January 1</string>
    <string name="numberFillText">##</string>
    <string name="expiryDateHint">Expiry Date</string>
    <string name="restockDateHint">Restock Date</string>
    <string name="dueDateHint">Due Date</string>

    <string name="clearDate">Clear</string>

    <string name="inactiveListWarning">This is an inactive List</string>
    <string name="noInactiveListWarning">No Inactive Lists Available</string>
    <string name="noGenerateItemsWarning">No Items Available</string>
</resources>