<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:padding="5dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp">

    <ImageButton
        android:id="@+id/deleteListButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/itemNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/itemNameText"
        android:inputType="textAutoComplete"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/dueDateTextView"
        app:layout_constraintStart_toEndOf="@id/foundCheckBox"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/numberFillText"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/restockDateEditText"
        app:layout_constraintStart_toStartOf="@+id/restockDateEditText"
        app:layout_constraintTop_toBottomOf="@+id/restockDateEditText" />


    <CheckBox
        android:id="@+id/foundCheckBox"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:text="@string/expireText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/dueDateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dueDateTextView" />

    <EditText
        android:id="@+id/dueDateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"

        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/dateFillText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/restockDateEditText"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@id/itemNameEditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/restockText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/restockDateEditText"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/restockDateEditText" />

    <EditText
        android:id="@+id/restockDateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:background="@android:color/transparent"
        android:hint="@string/dateFillText"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/itemQuantityEditText"
        app:layout_constraintStart_toStartOf="@+id/dueDateTextView"
        app:layout_constraintTop_toBottomOf="@id/dueDateTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/itemAmount"

        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/itemQuantityEditText"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/itemQuantityEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>