<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingStart="16dp"
    android:paddingTop="5dp"
    android:paddingEnd="15dp"
    android:paddingBottom="5dp">

    <ImageButton
        android:id="@+id/deleteListButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="@+id/listNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

    <TextView
        android:id="@+id/listNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/primaryText"

        android:background="@android:color/transparent"
        android:hint="@string/listNameText"
        android:textSize="@dimen/adapter_list_name_size"
        app:layout_constraintBottom_toTopOf="@id/dueDateText_List"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"

        android:drawablePadding="5dp"
        android:text="@string/dueDateText"
        android:textSize="@dimen/adapter_list_other_size"
        app:layout_constraintStart_toStartOf="@+id/listNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/listNameTextView" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"

        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="2dp"
        android:textAllCaps="false"

        android:textSize="@dimen/button_date_size"
        app:layout_constraintBottom_toBottomOf="@id/textView5"

        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toTopOf="@id/textView5"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

    <TextView
        android:id="@+id/dueDateText_List"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/secondaryText"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="false"
        android:hint="@string/dueDateHint"
        android:textSize="@dimen/adapter_list_other_size"
        app:layout_constraintBottom_toBottomOf="@id/imageButton1"
        app:layout_constraintStart_toEndOf="@id/imageButton1"
        app:layout_constraintTop_toTopOf="@id/imageButton1" />

</androidx.constraintlayout.widget.ConstraintLayout>
